<resources>
    <string name="app_name">Menu Project</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="shareText">Share the Love</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="text_sms">SMS</string>
    <string name="text_phone">Phone</string>
    <string name="text_web">Web</string>
    <string name="text_map">Map</string>
    <string name="text_share">Share</string>
    <string name="text_newActivity">New Activity</string>
    <string name="txt_NewActivity">Hello Nikita Jarile</string>
    <string name="txt_helpActivity">In Help Activity</string>
    <string name="btn_phone_no">7866085254</string>
    <string name="txt_name">Nikita Jarile</string>
    <string name="txt_webpage">https://developer.android.com/</string>
    <string name="txt_geoLocation">geo:20.558137,78.850701</string>
</resources>